# letters_recognize

./: LICENSE  README.md  letters_recognize.ipynb  pyproject.toml
